src/main/openshift/ed254-consumer-validator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ed254-consumer-validator
  namespace: swim-demo
  labels:
    app: ed254-consumer-validator
    app.kubernetes.io/name: ed254-consumer-validator
    app.kubernetes.io/part-of: ed254-consumer-validator
spec:
  selector:
    app: ed254-consumer-validator
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
  type: ClusterIP
